--- a/index.html
+++ b/index.html
@@ -21,7 +21,23 @@
     </header>
 
     <main>
-        <h1> em breve...</h1>
+        <section id="ficha">
+            <img src="imagens/guanabara-perfil.jpg" alt="img" class="foto">
+            <h1>Gustavo Guanabara</h1>
+            <p>Foramado em Ciencia da computação, ccom especialização em cocência superior, dessenvolvimento web e intelogência artificial. Apaixonado por tecnologia e sempre embusca de novos desafio. Atualmente, atuo como professor e desenvolvedor, compartilhando conhecimento através de cursos online e projetos de código aberto.</p>
+            <div id="social">
+                <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="#"><i class="fa-brands fa-github"></i></a>
+                <a href="#"><i class="fa-brands fa-youtube"></i></a>
+                <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                <a href="#"><i class="fa-solid fa-globe"></i></a>
+            </div>
+        </section>
+
+
+        <section id="detalhes">
+
+        </section>
     </main>
 
     <footer>
